kube/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: hello-world
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internal
spec:
  rules:
    - host:
      http:
        paths:

          - path: /
            pathType: Prefix
            backend:
              service:
                name: hello-world
                port:
                  number: 80
